ton message de commit

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-email/html": "0.0.11",
     "@react-email/render": "1.1.2",
     "@react-email/tailwind": "1.0.5",
+    "@react-three/fiber": "^9.3.0",
     "@shikijs/rehype": "^2.5.0",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tailwindcss/postcss": "^4.1.8",
@@ -71,6 +72,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
+    "latest": "^0.2.0",
     "lucide-react": "^0.513.0",
     "markdown-to-jsx": "^7.7.6",
     "mini-svg-data-uri": "^1.4.4",
@@ -90,6 +92,7 @@
     "react-hook-form": "^7.57.0",
     "react-hotkeys-hook": "^5.1.0",
     "react-markdown": "^10.1.0",
+    "react-slot:": "link:@radix-ui/react-slot:",
     "react-use": "^17.6.0",
     "recharts": "^2.15.3",
     "rehype-autolink-headings": "^7.1.0",
@@ -103,6 +106,7 @@
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "tslog": "^4.9.3",
     "up-fetch": "^2.1.6",
     "uploadthing": "^7.7.2",
