--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "date-fns": "^4.1.0",
     "front-matter": "^4.0.2",
     "latest": "^0.2.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
     "markdown-to-jsx": "^7.7.6",
     "mini-svg-data-uri": "^1.4.4",
