--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
@@ -59,6 +60,7 @@
     "@react-email/render": "1.1.2",
     "@react-email/tailwind": "1.0.5",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@shikijs/rehype": "^2.5.0",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tailwindcss/postcss": "^4.1.8",
@@ -86,6 +88,7 @@
     "next-zod-route": "^0.2.6",
     "nprogress": "^0.2.0",
     "nuqs": "^2.4.3",
+    "postprocessing": "^6.37.7",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -107,7 +110,7 @@
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.178.0",
+    "three": "^0.179.1",
     "tslog": "^4.9.3",
     "up-fetch": "^2.1.6",
     "uploadthing": "^7.7.2",
